# cs3263-rsmdp

./: .gitignore  README.md  RSMDP_Daily.ipynb  RSMDP_Portfolio_Management.ipynb  data_sourcing.ipynb
IEX_data/: 20200302_AAPL.csv  20200302_AMZN.csv  20200303_AAPL.csv  20200303_AMZN.csv
sdata/: README.md  pyproject.toml
sdata/output/eod/: 20250301_20250331_AAPL.csv  20250301_20250331_AMZN.csv  20250301_20250331_TSLA.csv
sdata/output/intraday/: 20250324_20250331_AAPL.csv  20250324_20250331_AMZN.csv  20250324_20250331_TSLA.csv  20250402_AMZN.csv
sdata/sdata/: __init__.py  cli.py
sdata/sdata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
server/: .gitignore  _test.py  chart.py  main.py  requirements.txt  store.py  trade_env.py  trade_test.py  value_iter.py
server/data/: 20250402_AAPL.csv  20250402_TSLA.csv
