[project]
name = "sdata"
version = "0.1.0"
description = "A simple CLI tool to fetch intraday stock data and save it as CSV"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests"
]

[project.scripts]
eod = "sdata.cli:eod"
intraday = "sdata.cli:intraday"

[tool.setuptools]
packages = ["sdata"]